[gd_scene load_steps=9 format=3 uid="uid://d2plt7bbw25l4"]

[ext_resource type="Texture2D" uid="uid://b115lhfkl3vr7" path="res://assets/Customer1.png" id="1_j7l3q"]
[ext_resource type="Script" path="res://scenes/actors/customer/customer.gd" id="2_bnhg0"]
[ext_resource type="Texture2D" uid="uid://d1wiivvgdyano" path="res://assets/brain-placeholder.png" id="3_wdcvl"]
[ext_resource type="Script" path="res://scenes/actors/customer/thought_slots.gd" id="4_7cdch"]
[ext_resource type="Texture2D" uid="uid://bbbrddqfpg23w" path="res://assets/items/Teas_Matcha.png" id="4_i4yk2"]
[ext_resource type="Texture2D" uid="uid://hyth23mbc3v" path="res://assets/items/Toppings_Cream.png" id="5_bpnoa"]
[ext_resource type="Texture2D" uid="uid://be1sysifitjtx" path="res://assets/items/Bobas_Tropical.png" id="6_rfnnb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hx83c"]
radius = 66.0
height = 500.0

[node name="Customer" type="Sprite2D"]
position = Vector2(727, 676)
texture = ExtResource("1_j7l3q")
flip_h = true
script = ExtResource("2_bnhg0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4, 39)
shape = SubResource("CapsuleShape2D_hx83c")

[node name="BrainBubble" type="Node2D" parent="."]
position = Vector2(21, -418)

[node name="Sprite2D" type="Sprite2D" parent="BrainBubble"]
scale = Vector2(2, 2)
texture = ExtResource("3_wdcvl")

[node name="ThoughtSlots" type="Node2D" parent="BrainBubble"]
script = ExtResource("4_7cdch")

[node name="Slot1" type="Sprite2D" parent="BrainBubble/ThoughtSlots"]
position = Vector2(52, 100)
texture = ExtResource("4_i4yk2")

[node name="Slot2" type="Sprite2D" parent="BrainBubble/ThoughtSlots"]
position = Vector2(-165, -65)
texture = ExtResource("5_bpnoa")

[node name="Slot3" type="Sprite2D" parent="BrainBubble/ThoughtSlots"]
position = Vector2(173, -112)
texture = ExtResource("6_rfnnb")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
